--- a/timer-control.html
+++ b/timer-control.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
-  <link rel="stylesheet" type="text/css" href="theme.css">
-  <!-- <link rel="stylesheet" href="bootstrap.min.css">
-   --><script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="//d3js.org/d3.v3.min.js"></script>
+<link rel="stylesheet" type="text/css" href="theme.css">
+<!-- <link rel="stylesheet" href="bootstrap.min.css">
+ --><script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
 </head>
 <body>
-  <div class=schedule>
-  </div>
-  <script src="timer-control.js"></script>
+	<div class=schedulePane>
+		<div id=scheduled class=schedule></div>
+		<div id=actual class=schedule></div>
+	</div>
+	<script src="timer-control.js"></script>
 </body>
