--- a/api.html
+++ b/api.html
@@ -1,11 +1,11 @@
 [
-	{"id":"a", "name":"a", "scheduledStart":"50400", "scheduledEnd":"51400", "done":true, "active":false},
-	{"id":"b", "name":"b", "scheduledStart":"51400", "scheduledEnd":"52400", "done":false, "active":true},
-	{"id":"c", "name":"c", "scheduledStart":"52400", "scheduledEnd":"53400", "done":false, "active":false},
-	{"id":"d", "name":"d", "scheduledStart":"53400", "scheduledEnd":"54400", "done":false, "active":false},
-	{"id":"e", "name":"e", "scheduledStart":"54400", "scheduledEnd":"55400", "done":false, "active":false},
-	{"id":"f", "name":"f", "scheduledStart":"55400", "scheduledEnd":"56400", "done":false, "active":false},
-	{"id":"g", "name":"g", "scheduledStart":"56400", "scheduledEnd":"57400", "done":false, "active":false},
-	{"id":"h", "name":"h", "scheduledStart":"57400", "scheduledEnd":"58400", "done":false, "active":false},
-	{"id":"i", "name":"i", "scheduledStart":"58400", "scheduledEnd":"73400", "done":false, "active":false}
+	{"id":"a", "name":"a", "scheduledStart":"50400", "scheduledEnd":"51400", "actualStart":"50400", "actualEnd":"51400", "done":true, "active":false},
+	{"id":"b", "name":"b", "scheduledStart":"51400", "scheduledEnd":"52400", "actualStart":"51400", "actualEnd":"52400", "done":false, "active":true},
+	{"id":"c", "name":"c", "scheduledStart":"52400", "scheduledEnd":"53400", "actualStart":"52400", "actualEnd":"53400", "done":false, "active":false},
+	{"id":"d", "name":"d", "scheduledStart":"53400", "scheduledEnd":"54400", "actualStart":"53400", "actualEnd":"54400", "done":false, "active":false},
+	{"id":"e", "name":"e", "scheduledStart":"54400", "scheduledEnd":"55400", "actualStart":"54400", "actualEnd":"55400", "done":false, "active":false},
+	{"id":"f", "name":"f", "scheduledStart":"55400", "scheduledEnd":"56400", "actualStart":"55400", "actualEnd":"56400", "done":false, "active":false},
+	{"id":"g", "name":"g", "scheduledStart":"56400", "scheduledEnd":"57400", "actualStart":"56400", "actualEnd":"57400", "done":false, "active":false},
+	{"id":"h", "name":"h", "scheduledStart":"57400", "scheduledEnd":"58400", "actualStart":"57400", "actualEnd":"58400", "done":false, "active":false},
+	{"id":"i", "name":"i", "scheduledStart":"58400", "scheduledEnd":"73400", "actualStart":"58400", "actualEnd":"59400", "done":false, "active":false}
 ]
