--- a/timer-control.html
+++ b/timer-control.html
@@ -9,8 +9,14 @@
 </head>
 <body>
 	<div class=schedulePane>
-		<div id=scheduled class=schedule></div>
-		<div id=actual class=schedule></div>
+		<div id=scheduled class=schedule>
+			<div class=scheduleHeader>Scheduled Agenda</div>
+			<div class=actualSchedule></div>
+		</div>
+		<div id=actual class=schedule>
+			<div class=scheduleHeader>Actual Timeline</div>
+			<div class=actualSchedule></div>
+		</div>
 	</div>
 	<script src="timer-control.js"></script>
 </body>
