basic static timeline layout

--- a/timer-control.html
+++ b/timer-control.html
@@ -5,18 +5,15 @@
 <!-- <link rel="stylesheet" href="bootstrap.min.css">
  --><script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="//d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 </head>
 <body>
 	<div class=schedulePane>
-		<div id=scheduled class=schedule>
-			<div class=scheduleHeader>Scheduled Agenda</div>
-			<div class=actualSchedule></div>
+		<div class=scheduleHeader>
+			<div id=left class=scheduleHeaderText>Scheduled Timeline</div>
+			<div id=right class=scheduleHeaderText>Actual Timeline</div>
 		</div>
-		<div id=actual class=schedule>
-			<div class=scheduleHeader>Actual Timeline</div>
-			<div class=actualSchedule></div>
-		</div>
+		<div class="timelineDiv"></div>
 	</div>
 	<script src="timer-control.js"></script>
 </body>
