--- a/timer-control.html
+++ b/timer-control.html
@@ -6,6 +6,7 @@
  --><script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="moment.min.js"></script>
 </head>
 <body>
 	<div class=schedulePane>
