--- a/qunit.html
+++ b/qunit.html
@@ -9,8 +9,12 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="timer-control.js"></script>
   <script src="https://code.jquery.com/qunit/qunit-2.0.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://d3js.org/d3.v3.min.js"></script>
+  <script src="moment.min.js"></script>
+  <script src="timer-control.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
