update for taking in gaps

--- a/timer-control.html
+++ b/timer-control.html
@@ -6,6 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3-path.v1.min.js"></script>
 <script src="moment.min.js"></script>
 </head>
 <body>
@@ -67,9 +68,9 @@
 			<p>
 				<button type="button" class="btn btn-lg btn-block" data-bind="css: { 'btn-primary active': controlAutoStart }, click:controlSetAutoStart">Automatically start next event</button>
 			</p>
-			<p>
+<!-- 			<p>
 				<button type="button" class="btn btn-lg btn-block" data-bind="css: { 'btn-primary active': controlMoveEventsUp }, click:controlSetMoveEventsUp">Move events up when one ends early</button>
-			</p>
+			</p> -->
 <!-- 			<p>
 				<div class="half left">
 					<button type="button" class="btn btn-primary btn-lg btn-block active col-md-6;">Make up slippage with gaps</button>
